# mqbot-rs

./: .gitignore  Cargo.toml  README.md  config.example.toml
frontend/: Cargo.toml  Makefile  watch.sh
frontend/src/: main.rs  playlist.rs  playlist_entry.rs  video_viewer.rs
frontend/static/: index.html
migrations/20180415095313_create_everything/: down.sql  up.sql
migrations/20180415095313_create_posts_and_user/: down.sql  up.sql
migrations/20180415113111_add_chat_playlist_name/: up.sql
poc/: Cargo.toml  index.html  index1.html  myapp.js
poc/src/: main.rs
src/: bot.rs  lib.rs  main.rs  mq_bot.rs  settings.rs
src/db/: mod.rs  models.rs  schema.rs
src/db/models/: chat.rs  entry.rs  mod.rs  playlist.rs  user.rs  user_playlist.rs
src/server/: db.rs  factory.rs  mod.rs  responses.rs
src/server/api/: playlist.rs
