[package]
name = "mediaq"
version = "0.1.0"
authors = ["Arne Beer <arne@twobeer.de>"]

[dependencies]
telegram-bot = "0.6"
diesel = { version = "1.2.0", features = ["postgres"] }
diesel_migrations = "1.2.0"
serde = "1.0"
serde_json = "1.0"
futures = "0.1"
tokio-core = "0.1"
config = "0.8"
indoc = "0.2"
