[package]
name = "mediaq"
version = "0.1.0"
authors = ["Arne Beer <arne@twobeer.de>",
           "Sven-Hendrik Haase <svenstaro@gmail.com>"]
repository = "https://github.com/nukesor/mediaq-rs"
license = "MIT"
keywords = ["telegram", "media", "queue", "bot"]

[dependencies]
telegram-bot = "0.6"
diesel = { version = "1.2.0", features = ["postgres"] }
diesel_migrations = "1.2.0"
rocket = "0.3"
rocket_contrib = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_json = "1.0"
futures = "0.1"
tokio-core = "0.1"
config = "0.9"
indoc = "0.2"
